# runq

./: .gitignore  README.md  pyproject.toml
src/runq/: __init__.py  cli.py  grid.py  merge.py  notify.py  params.py  query.py  runner.py  store.py  table.py  target.py  worker.py
src/runq/backends/: local.py
tests/: conftest.py  test_cli.py  test_grid.py  test_merge.py  test_notify.py  test_params.py  test_query.py  test_runner.py  test_store.py  test_table.py  test_target.py
tests/targets/: toy.py
